test/error/UnreachableFor.fu
public static class Test
{
	public static bool Run()
	{
		for (;;) {
		}
		for (int i = 0; i < 10; i++) { //ERROR: Unreachable statement
		}
	}
}
